--- a/style.css
+++ b/style.css
@@ -34,20 +34,32 @@ main img {
   width: 100px;
 }
 
+#host ul {
+  margin-bottom: 25px;
+}
+
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
   flex-direction: column;
+  align-content: center;
 }
 
 .item {
   flex: 1;
-  margin: 10px;
+  width: 100%;
+  margin-bottom: 15px;
 }
 
 .item-double {
   flex: 2;
+  width: 100%;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
 }
 
 /* -------  Navigation ------- */
@@ -64,6 +76,17 @@ header {
   color: #fff;
 }
 
+header nav {
+  display: flex;
+  justify-content: center;
+}
+
+header nav ul {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+}
+
 header nav ul li {
   list-style-type: none;
 }
@@ -71,12 +94,16 @@ header nav ul li {
 header nav ul li a {
   color: #fff;
   text-decoration: none;
-  padding: 0 20px 0 0;
+  padding: 0 20px 0 ;
 }
 
 header nav ul li a:hover {
   color: #bdbdbd;
   text-decoration: none;
+}
+
+header nav ul li:last-child a{
+  padding-right: 0;
 }
 
 /* -------  Search Form ------- */
@@ -104,6 +131,16 @@ form button {
   width: 100%;
 }
 
+form:first-of-type div {
+  margin-top: 10px;
+}
+
+.flex-entry {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 15px;
+}
+
 /* -------  Footer ------- */
 
 footer {
@@ -117,3 +154,55 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+
+@media all and (min-width: 480px){
+  .group {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #about .item {
+    max-width: 25%;
+    margin: 5px;
+  }
+  #ideas .item {
+    width: 100%;
+  }
+  #ideas .group {
+    flex-wrap: wrap;
+    margin: 0;
+  }
+  .item-double {
+    margin: 5px;
+  }
+  .col {
+    width: 50%;
+    padding: 5px;
+    box-sizing: border-box;
+  }
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    padding: 10px;
+  }
+  .logo {
+    font-size: 48px;
+  }
+  form {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+  }
+  form button {
+    width: 15%;
+    padding: 0;
+  }
+  .flex-entry {
+    flex-direction: column;
+    align-items: left;
+  }
+  #host img {
+    width: 50%;
+  }
+}
